--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -3,10 +3,23 @@ body {
   font-family: sans-serif;
 }
 
+h1 {
+  font-size: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+div, h1 {
+  margin: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 .card {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 1px;
 }
 
 .title {
@@ -15,13 +28,22 @@ body {
 
 .content {
   background: #e3f4ff;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin: 0 auto;
+  padding: 10px 20px;
+
 }
