--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,9 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
 }
 
 .logo {
@@ -9,11 +12,25 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 10px;
 }
 
-ul {
+.right-links, .left-links {
+  display: flex;
+}
+
+
+.right-links ul, .left-links ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  padding: 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+li {
+  margin: 10px;
 }
 
 a {
