--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,18 +2,31 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
-  height: 72px;
+  height: 56px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  text-align: left;
+  padding-left: 16px;
+  padding-top: 16px;;
+}
+
+.content {
+  display: flex;
 }
 
 .footer {
-  height: 72px;
+  height: 48px;
+  padding-top: 24px;;
   background: #eee;
   color: darkmagenta;
+  text-align: center;
 }
 
 .sidebar {
