Exercise 03-grid-layout-3: updated the style for .container

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,11 @@
 
 .container {
   text-align: center;
+
+  /* Added */
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
 }
 
 .container div {
