Exercise 03-grid-layout-3: Adjusted style for the .header element (made into a grid)

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -22,6 +22,11 @@
 
 .header {
   background-color: #393f4d;
+
+  /* Added */
+  grid-column: 1 / -1;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
 }
 
 .logo {
