Exercise 03-grid-layout-3: Basic style for the nav bar (made into a grid with three columns, removed bullets)

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -75,6 +75,10 @@
 }
 
 .nav ul {
+  /* Added */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  list-style: none;
 }
 
 .nav ul li {
