--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -9,8 +9,8 @@
   /* Added */
   display: grid;
   grid-template-columns: 1fr 4fr;
-  grid-template-rows: 2fr 1fr auto 1fr;
   gap: 4px;
+  text-align: center;
 }
 
 .container div {
@@ -55,7 +55,7 @@
   /* Added */
   display: grid;
   gap: 50px;
-  grid-row: 2 / -2;
+  grid-row: 2 / 4;
 }
 
 .sidebar .photo {
@@ -99,7 +99,6 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-column: 2 / -1;
-  grid-row: 3 / -2;
 }
 
 .article p {
