--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -74,6 +74,11 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+
+  /* Added */
+  display: grid;
+  justify-items: center;
+  align-items: center;
 }
 
 .nav {
