--- a/animation/01-button-hover/style.css
+++ b/animation/01-button-hover/style.css
@@ -16,6 +16,7 @@ button {
   font-size: 18px;
   padding: 16px 24px;
   text-align: center;
+  transition: transform 0.25s ease-in;
 }
 
 button:hover {
